# auto-typing-suggestions

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: App.cpp  TernarySearchTree.cpp  Trie.cpp  TrieNode.cpp
src/include/: App.h  TernarySearchTree.h  TernarySearchTreeNode.h  Trie.h  TrieNode.h  Util.h
